--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,17 @@
 h1 {
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    avenir next,
-    avenir,
-    segoe ui,
-    helvetica neue,
-    helvetica,
-    Cantarell,
-    Ubuntu,
-    roboto,
-    noto,
-    arial,
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
+    helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial,
     sans-serif;
-  margin: 24px 0;
+  margin: 100px 0;
 }
 
 .bold-paragraph {
-  color: #ff87a6;
+  color: #780edb;
 }
 
 #bold {
-  background-color: #ff87a6;
-  color: white;
+  background-color: #24f808;
+  color: rgb(223, 8, 205);
 }
 
 img {
